--- a/terms/Productname.html
+++ b/terms/Productname.html
@@ -38,7 +38,7 @@
 
   
   <script src="https://www.dublincore.org/js/components.js"></script>
-  <meta property="og:url" content="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/">
+  <meta property="og:url" content="https://chamchi-rockstar.github.io/KLP/">
   <meta property="og:site_name" content="KLP">
   <meta property="og:title" content="KLP Metadata Terms">
   <meta property="og:type" content="website">
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td class="field-name">URI</td>
-            <td>https://chamchi-rockstar.github.io/KLP/terms/Productname</td>
+            <td>https://chamchi-rockstar.github.io/KLP/terms/Productname.html</td>
         </tr>
         <tr>
             <td class="field-name">Label</td>
