--- a/terms/productidentification.html
+++ b/terms/productidentification.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,7 +38,7 @@
 
   
   <script src="https://www.dublincore.org/js/components.js"></script>
-  <meta property="og:url" content="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/">
+  <meta property="og:url" content="https://chamchi-rockstar.github.io/KLP/">
   <meta property="og:site_name" content="KLP">
   <meta property="og:title" content="KLP Metadata Terms">
   <meta property="og:type" content="website">
@@ -51,17 +50,17 @@
 <h2 id="section-1-1">Term Name: product identification</h2>
 <table>
     <tbody>
-        <tr id="https://chamchi-rockstar.github.io/KLP/terms/productidentification" class="divider-title-row">
+        <tr id="https://chamchi-rockstar.github.io/KLP/terms/productidentification.html" class="divider-title-row">
             <td id="productidentification" colspan="2">
                 Term Name: product identification
                 <div class="more-details-link">
-                    <a href="https://chamchi-rockstar.github.io/KLP/terms/productidentification"><span class="dcmi-terms-more-details-link">More details</span></a>
+                    <a href="https://chamchi-rockstar.github.io/KLP/terms/productidentification.html"><span class="dcmi-terms-more-details-link">More details</span></a>
                 </div>
             </td>
         </tr>
         <tr>
             <td class="field-name">URI</td>
-            <td>https://chamchi-rockstar.github.io/KLP/terms/productidentification</td>
+            <td>https://chamchi-rockstar.github.io/KLP/terms/productidentification.html</td>
         </tr>
         <tr>
             <td class="field-name">Label</td>
