--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   
   <script src="https://www.dublincore.org/js/components.js"></script>
-  <meta property="og:url" content="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/">
+  <meta property="og:url" content="https://chamchi-rockstar.github.io/KLP/">
   <meta property="og:site_name" content="KLP">
   <meta property="og:title" content="KLP Metadata Terms">
   <meta property="og:type" content="website">
