--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@
         </div>
       </main>
     </div>
-  
-<h2><a href="https://chamchi-rockstar.github.io/KLP/userinterface.html">이용자 화면 예시</h2> 
+<br>  
+<h2 class="page-title"><a href="https://chamchi-rockstar.github.io/KLP/userinterface.html">이용자 화면 예시</h2> 
 
 
 
