--- a/login.html
+++ b/login.html
@@ -72,9 +72,9 @@
 
     <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="KLP/home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://github.com/Chamchi-Rockstar/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="KLP/login.html" style="font-weight: bold;">로그인</a> <a href="KLP/cart.html">장바구니</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html" style="font-weight: bold;">로그인</a> <a href="KLP/cart.html">장바구니</a>
             </div>
         </div>
     </header>
