--- a/cart.html
+++ b/cart.html
@@ -48,10 +48,10 @@
 
     <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="KLP/home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://github.com/Chamchi-Rockstar/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="KLP/login.html">로그인</a>
-                <a href="KLP/cart.html" style="font-weight: bold;">장바구니</a> </div>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html">로그인</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/cart.html" style="font-weight: bold;">장바구니</a> </div>
         </div>
     </header>
 
