--- a/home.html
+++ b/home.html
@@ -2,9 +2,9 @@
         <div class="header-content">
             <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="login.html">로그인</a>
-                <a href="cart.html">장바구니</a>
-                <a href="../index.html" style="color: #ffd700;">메타데이터 인덱스</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html">로그인</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/cart.html">장바구니</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/" style="color: #ffd700;">메타데이터 인덱스</a>
             </div>
         </div>
     </header>
@@ -17,11 +17,11 @@
 ```html
     <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://github.com/Chamchi-Rockstar/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="login.html">로그인</a>
-                <a href="cart.html" style="font-weight: bold;">장바구니</a>
-                <a href="../index.html" style="color: #ffd700;">메타데이터 인덱스</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html">로그인</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/cart.html" style="font-weight: bold;">장바구니</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/" style="color: #ffd700;">메타데이터 인덱스</a>
             </div>
         </div>
     </header>
@@ -34,11 +34,11 @@
 ```html
     <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://github.com/Chamchi-Rockstar/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="login.html" style="font-weight: bold;">로그인</a>
-                <a href="cart.html">장바구니</a>
-                <a href="../index.html" style="color: #ffd700;">메타데이터 인덱스</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html" style="font-weight: bold;">로그인</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/cart.html">장바구니</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/" style="color: #ffd700;">메타데이터 인덱스</a>
             </div>
         </div>
     </header>
