--- a/home.html
+++ b/home.html
@@ -13,13 +13,7 @@
             </div>
         </div>
     </header>
-    ```
 
-### 3. `KLP/cart.html` (장바구니 페이지) - 헤더 수정
-
-장바구니 페이지의 헤더에 `index.html` 링크를 추가했습니다.
-
-```html
     <header class="header">
         <div class="header-content">
             <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
@@ -30,13 +24,7 @@
             </div>
         </div>
     </header>
-    ```
 
-### 4. `KLP/login.html` (로그인 페이지) - 헤더 수정
-
-로그인 페이지의 헤더에 `index.html` 링크를 추가했습니다.
-
-```html
     <header class="header">
         <div class="header-content">
             <div class="klp-title"><a href="https://chamchi-rockstar.github.io/KLP/home.html">KLP SHOP</a></div>
@@ -47,10 +35,8 @@
             </div>
         </div>
     </header>
-    ```
-
-이제 **`userinterface.html`**을 포함한 모든 주요 페이지에서 **메인 페이지, 장바구니, 로그인 페이지**에 접근할 수 있으며, **메타데이터 인덱스(`index.html`)**도 참조할 수 있게 되었습니다.
-    <title>KLP SHOP: 프리미엄 의류 쇼핑몰</title>
+   
+    <title>KLP SHOP: 의류 쇼핑몰</title>
     <style>
         /* Common CSS (Header) */
         body { font-family: 'Malgun Gothic', '맑은 고딕', Arial, sans-serif; line-height: 1.6; margin: 0; background-color: #f8f8f8; color: #333; }
