--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://chamchi-rockstar.github.io/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
                 <a href="login.html">로그인</a>
                 <a href="cart.html">장바구니</a>
@@ -16,11 +16,11 @@
 
     <header class="header">
         <div class="header-content">
-            <div class="klp-title"><a href="home.html">KLP SHOP</a></div>
+            <div class="klp-title"><a href="https://chamchi-rockstar.github.io/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="login.html">로그인</a>
-                <a href="cart.html" style="font-weight: bold;">장바구니</a>
-                <a href="../index.html" style="color: #ffd700;">메타데이터 인덱스</a>
+                <a href="https://chamchi-rockstar.github.io/KLP/login.html">로그인</a>
+                <a href="https://chamchi-rockstar.github.io/KLP/cart.html" style="font-weight: bold;">장바구니</a>
+                <a href="https://chamchi-rockstar.github.io/KLP/" style="color: #ffd700;">메타데이터 인덱스</a>
             </div>
         </div>
     </header>
@@ -93,7 +93,7 @@
 
         <h2 class="section-header">🔥 WEEKLY BEST SELLERS</h2>
         <div class="product-grid">
-            <a href="https://chamchi-rockstar.github.io/KLP/product_detail.html" class="product-card">
+            <a href="https://chamchi-rockstar.github.io/KLP/userinterface.html" class="product-card">
                 <img src="https://tbhimg.com/images/MB/M ZWS61A200_S00.jpg" alt="스트라이프 셔츠">
                 <div class="product-info">
                     <p class="rating">★★★★☆</p>
@@ -101,7 +101,7 @@
                     <p class="price">39,950원</p>
                 </div>
             </a>
-            <a href="KLP/product_detail_2.html" class="product-card">
+            <a href="https://chamchi-rockstar.github.io/KLP/product_detail_2.html" class="product-card">
                 <img src="[여성용-롱코트-이미지-URI]" alt="울 블렌드 롱 코트">
                 <div class="product-info">
                     <p class="rating">★★★★★</p>
@@ -109,7 +109,7 @@
                     <p class="price">120,000원</p>
                 </div>
             </a>
-            <a href="KLP/product_detail_3.html" class="product-card">
+            <a href="https://chamchi-rockstar.github.io/KLP/product_detail_3.html" class="product-card">
                 <img src="[남성-무지티-이미지-URI]" alt="쿨 코튼 무지 티셔츠">
                 <div class="product-info">
                     <p class="rating">★★★★☆</p>
@@ -117,7 +117,7 @@
                     <p class="price">19,900원</p>
                 </div>
             </a>
-            <a href="KLP/product_detail_4.html" class="product-card">
+            <a href="https://chamchi-rockstar.github.io/KLP/product_detail_4.html" class="product-card">
                 <img src="[데님-팬츠-이미지-URI]" alt="슬림핏 데님 팬츠">
                 <div class="product-info">
                     <p class="rating">★★★★☆</p>
