--- a/index.html
+++ b/index.html
@@ -277,9 +277,11 @@
     </div>
 <div class="flex flex-wrap ">
     <div class="prose relative grow max-w-full flex-1 px-4">
-      <h1 class="page-title"><a href="https://chamchi-rockstar.github.io/KLP/userinterface.html">이용자 화면 예시</a></h1>
+      <a href="https://chamchi-rockstar.github.io/KLP/home.html"><h1 class="page-title">이용자 화면</h1></a>
     </div>
 </div>
+    </div>
+  </body>
     <script>
         // 현재 활성화된 필터 타입 (기본: all)
         let currentFilterType = 'all';
@@ -362,6 +364,4 @@
             document.querySelector('.filter-button[data-filter="all"]').classList.add('active');
         });
     </script>
-
-</body>
 </html>
