--- a/index.html
+++ b/index.html
@@ -301,11 +301,13 @@
       <table>
             <tr>
                 <td colspan="2">구분</td>
-                <td colspan="2">디스플레이</td>
-                <td colspan="2">검색</td>
-                <td colspan="2">필터링</td>
+                <td>디스플레이</td>
+                <td>검색</td>
+                <td>필터링</td>
             </tr>
-            <tr><td class="field-name">상품아이디</td><td>O</td><td>X</td><td>X</td></tr>
+            <tr><td class="field-name">상품아이디</td>
+              <td>O</td>
+              <td>X</td><td>X</td></tr>
         
             <tr><td class="field-name">상품명</td><td>O</td><td>O</td><td>X</td></tr>
         
