--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
         <div class="header-content">
             <div class="klp-title"><a href="https://github.com/Chamchi-Rockstar/KLP/home.html">KLP SHOP</a></div>
             <div class="klp-util">
-                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html" style="font-weight: bold;">로그인</a> <a href="KLP/cart.html">장바구니</a>
+                <a href="https://github.com/Chamchi-Rockstar/KLP/login.html" style="font-weight: bold;">로그인</a> <a href="https://github.com/Chamchi-Rockstar/KLP/cart.html">장바구니</a>
             </div>
         </div>
     </header>
@@ -91,9 +91,9 @@
         </form>
         
         <div class="login-options">
-            <a href="KLP/find_id.html">아이디 찾기</a> | 
-            <a href="KLP/find_password.html">비밀번호 찾기</a> | 
-            <a href="KLP/signup.html">회원가입</a>
+            <a href="https://github.com/Chamchi-Rockstar/KLP/find_id.html">아이디 찾기</a> | 
+            <a href="https://github.com/Chamchi-Rockstar/KLP/find_password.html">비밀번호 찾기</a> | 
+            <a href="https://github.com/Chamchi-Rockstar/KLP/signup.html">회원가입</a>
         </div>
     </div>
 
