--- a/login.html
+++ b/login.html
@@ -91,8 +91,8 @@
         </form>
         
         <div class="login-options">
-            <a href="https://github.com/Chamchi-Rockstar/KLP/find_id.html">아이디 찾기</a> | 
-            <a href="https://github.com/Chamchi-Rockstar/KLP/find_password.html">비밀번호 찾기</a> | 
+            <a href="https://github.com/Chamchi-Rockstar/KLP/find_id.html">아이디 찾기</a>
+            <a href="https://github.com/Chamchi-Rockstar/KLP/find_password.html">비밀번호 찾기</a>
             <a href="https://github.com/Chamchi-Rockstar/KLP/signup.html">회원가입</a>
         </div>
     </div>
