--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 
   
   <link rel="preconnect" href="https://fonts.bunny.net/">
-  <link href="./Index_files/css" rel="stylesheet">
+  <link href="https://chamchi-rockstar.github.io/KLP/css/stylesheet.css" rel="stylesheet">
 
   
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://www.dublincore.org/css/build/main.min.7047ac526addaa5ad62f62736b0a65073a971fc52d25a7ead9fd18bed8ebd4bd.css">
 
   
-  <link rel="stylesheet" href="https://www.dublincore.org/css/modal-video.min.css">
+  <link rel="stylesheet" href="https://chamchi-rockstar.github.io/KLP/css/modal-video.min.css">
 
   
-  <link rel="stylesheet" href="https://www.dublincore.org/css/datatables.min.css">
+  <link rel="stylesheet" href="https://chamchi-rockstar.github.io/KLP/css/datatables.min.css">
 
   
   <script type="text/javascript" src="https://www.dublincore.org/js/jquery-3.7.1.min.js"></script>
 
   
-  <script type="text/javascript" src="https://www.dublincore.org/js/datatables.min.js"></script>
+  <script type="text/javascript" src="https://chamchi-rockstar.github.io/KLP/js/datatables.min.js"></script>
 
   
-  <script type="text/javascript" src="https://www.dublincore.org/js/dataTables.tailwindcss.js"></script>
+  <script type="text/javascript" src="https://chamchi-rockstar.github.io/KLP/js/dataTables.tailwindcss.js"></script>
 
   
   <script type="text/javascript" src="https://www.dublincore.org/js/dcmi.js"></script>
@@ -67,7 +67,7 @@
       <div class="mx-auto max-w-7xl px-4 pt-4 sm:px-6">
         <div class="flex items-center justify-between py-4 md:justify-start md:space-x-10">
           <div class="flex justify-start lg:w-0 lg:flex-1">
-            <a href="file:///C:/">
+            <a href="https://chamchi-rockstar.github.io/KLP/">
               <span class="sr-only">KLP Terms</span>
             </a>
 
