--- a/index.html
+++ b/index.html
@@ -336,8 +336,14 @@
       <br>
   <hr>
     </div>
+      
       <h2 id="section-2">Display</h2>
-      <table>
+      <table class="term-definition">
+            <tr class="divider-title-row">
+             <td id="accessRights" colspan="2">
+             Display
+            </td>
+            </tr>
             <tr>
                 <td colspan="2">구분</td>
                 <td colspan="2">디스플레이</td>
