--- a/index.html
+++ b/index.html
@@ -453,9 +453,11 @@
     <div class="prose relative grow max-w-full flex-1 px-4">
       <a href="https://chamchi-rockstar.github.io/KLP/backpage.html"><h1 id="section-4" class="page-title">제작 화면<h1></a>
     </div>
-    
+        <div class="prose relative grow max-w-full flex-1 px-4">
+      <a href="https://chamchi-rockstar.github.io/KLP/adminpage.html"><h1 id="section-4" class="page-title">상품 관리<h1></a>
+      </div>
 </div>
-    </div>
+      </div>
     <script>
         // 현재 활성화된 필터 타입 (기본: all)
         let currentFilterType = 'all';
